--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,26 +5,28 @@
 </head>
 
 <body>
-<p class=tituloPrincipal>Descrição Principal</p>
- <div class="container">
-  <div class="row" >
-    <div class="col-md-6" >
-      <p class=titulo>Descrição 1</p>
+<p class=tituloPrincipal>Teste de Bootstrap</p>
+ <div class="container ">
+  <div class="row align-items-center" >
+    <div class="col-sm-6" >
+      <p class=titulo>Barra 1</p>
       <div class="progress">
         <div [ngClass]="'progress-bar ' + cor1 " role="progressbar" [ngStyle]="{'width': valor1+'%'}"  aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">{{valor1}}</div>
       </div>
       
     </div>
-    <div class="col-md-6" >
-      <p class = titulo>Descrição 2</p>
+    <div class="col-sm-6" >
+      <p class = titulo>Barra 2</p>
       <div class="progress">
         <div [ngClass] ="'progress-bar ' + cor2 " role="progressbar"  [ngStyle]="{'width': valor2+'%'}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{valor2}}</div>
       </div>
     </div>
 
   </div>
+  <br>
+<p> Atualização: {{datahora | date:'short'}}</p>
 </div>
-
+ 
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
