--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
       <div class="progress">
         <div [ngClass]="'progress-bar ' + cor1 " role="progressbar" [ngStyle]="{'width': valor1+'%'}"  aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">{{valor1}}%</div>
       </div>
-      <br>
+      <p class=acao>{{acao1}}</p>
       
     </div>
     <div class="col-sm-6" >
@@ -21,11 +21,11 @@
       <div class="progress">
         <div [ngClass] ="'progress-bar ' + cor2 " role="progressbar"  [ngStyle]="{'width': valor2+'%'}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{valor2}}%</div>
       </div>
-    <br>
+    <p class=acao>{{acao2}}</p>
     </div>
 
   </div>
-  <p>Atualização: {{datahora | date:'short'}}</p>
+  <p class=rodape >Atualização: {{datahora | date:'short'}}</p>
 </div>
  
 
