--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,9 @@
 </div>
 <app-coloca-dados-banco></app-coloca-dados-banco>
 <br>
-<app-pega-dados-banco></app-pega-dados-banco>
+<app-grafico [listaDoGrafico] = listaDoPai ></app-grafico>
+<br>
+<app-pega-dados-banco (mudouLista)= onMudouLista($event) ></app-pega-dados-banco>
 
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
