--- a/src/app/grafico/grafico.component.html
+++ b/src/app/grafico/grafico.component.html
@@ -1,14 +1,15 @@
-<!-- <div class="row">
-  <div class="col-md-6">
+<div class="container " *ngIf="listaDoGrafico then atualizaGrafico(listaDoGrafico)" >
+<div class="row">
+  <div class="col-md-12">
     <div style="display: block;">
-    <canvas baseChart width="400" height="400"
+    <canvas baseChart width="200" height="100"
                 [datasets]="lineChartData"
                 [labels]="lineChartLabels"
                 [options]="lineChartOptions"
                 [colors]="lineChartColors"
                 [legend]="lineChartLegend"
                 [chartType]="lineChartType"
-                (chartHover)="chartHovered($event)"
-                (chartClick)="chartClicked($event)"></canvas>
+                ></canvas>
     </div>
-  </div> -->
+  </div>
+</div>
