--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,9 @@
     <div class="col-sm-12" >
       <p class=titulo>Barra 1</p>
       <div class="progress">
-        <div [ngClass]="'progress-bar ' + cor1 " role="progressbar" [ngStyle]="{'width': valor1+'%'}"  aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">{{valor1}}%</div>
+        <div [ngClass]="'progress-bar ' + corbg1 " role="progressbar" [ngStyle]="{'width': valor1+'%'}"  aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">{{valor1}}%</div>
       </div>
-      <p class=acao>{{acao1}}</p>
+      <p [ngClass]= "cor1 "  text-align:left font-size:2.7em  >{{acao1}}</p>
 
     </div>
     <!--<div class="col-sm-6" >
