--- a/src/app/coloca-dados-banco/coloca-dados-banco.component.html
+++ b/src/app/coloca-dados-banco/coloca-dados-banco.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12 text-center">
-      <button type="button" class="btn btn-primary "  (click)="chamaColocaDados()">Teste de colocar dados</button>
-    </div>
+      <button type="button" class="btn btn-primary "  (click)="chamaColocaDados()">Coloca Dados</button>
+      <button type="button" class="btn btn-primary "  (click)="chamaDeletaDados()">Deleta Dados</button>
+      
   </div> 
 </div>
