Permite retirar o ultimo dado do banco

--- a/src/app/coloca-dados-banco/coloca-dados-banco.component.html
+++ b/src/app/coloca-dados-banco/coloca-dados-banco.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12 text-center">
       <button type="button" class="btn btn-primary "  (click)="chamaColocaDados()">Coloca Dados</button>
-      <button type="button" class="btn btn-primary "  (click)="chamaDeletaDados()">Deleta Dados</button>
-      
+     <button type="button" class="btn btn-primary "  (click)="chamaDeletaUltimoDado()">Deleta Último</button>
+      <button type="button" class="btn btn-primary "  (click)="chamaDeletaTodosDados()">Deleta Todos</button>
   </div> 
 </div>
