--- a/src/app/pega-dados-banco/pega-dados-banco.component.html
+++ b/src/app/pega-dados-banco/pega-dados-banco.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-<div class="row">
+<!-- <div class="row">
   <div class="col-sm-12 text-center">
     <button type="button" class="btn btn-primary "  (click)="atualizaDados()">Atualiza dados</button>
   </div>
-</div> 
+</div>  -->
 
 <ul>
   <li *ngFor="let item of items | async">
